Use some Java 17 language features. Skip non-scannable methods when loading definitions.